# cellular-automata-class

./: LICENSE  README.md  setup.cfg
src/cellular_automata_class.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
