[metadata]
name = cellular_automata_class
version = 0.0.3
author = Jafar Isbarov
author_email = cefer.isbarov@gmail.com
description = An expandable cell class intended for constructing Cellular Automata
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ceferisbarov/cell-automata-class
project_urls =
    Bug Tracker = https://github.com/ceferisbarov/cell-automata-class/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
